# poetry-requirements-txt-sync

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  pyproject.toml
poetry_requirements_txt_sync/: __init__.py
tests/: sample_pyproject.toml  test_poetry_requirements_txt_sync.py
