[tool.poetry]
name = "poetry-requirements-txt-sync"
version = "0.1.0"
description = ""
authors = ["Kristoffer Bakkejord"]
# packages = [""]

[tool.poetry.scripts]
poetry-requirements-txt-sync = "poetry_requirements_txt_sync:main"

[tool.poetry.dependencies]
python = "^3.8"
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
